etc/default/iptables.rules
# Generated by iptables-save v1.4.21 on Mon May 29 14:09:51 2017
*nat
:PREROUTING ACCEPT [96:7776]
:INPUT ACCEPT [78:5240]
:OUTPUT ACCEPT [2455:158005]
:POSTROUTING ACCEPT [2452:157786]
COMMIT
# Completed on Mon May 29 14:09:51 2017
# Generated by iptables-save v1.4.21 on Mon May 29 14:09:51 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:SSHBRUTE - [0:0]
:fail2ban-apache-multiport - [0:0]
:fail2ban-postfix - [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 25,465,587 -j fail2ban-postfix
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-apache-multiport
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -i lo -j ACCEPT
-A INPUT -i wlan0 -j DROP
-A INPUT -s 10.10.10.2/32 -j DROP
-A INPUT -s 255.0.0.0/8 -j DROP
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 10.10.10.0/24 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -j DROP
-A INPUT -p udp -m udp --dport 19 -j DROP
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 9 -j ACCEPT
-A INPUT -p udp -m udp --dport 7 -j ACCEPT
-A INPUT -s 150.214.143.1/32 -p udp -m udp --sport 123 -j ACCEPT
-A INPUT -p udp -m udp --sport 500 -j ACCEPT
-A INPUT -p udp -m udp --sport 4500 -j ACCEPT
-A INPUT -p udp -m udp --sport 1194 -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -p ah -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -p ah -j ACCEPT
-A INPUT -p udp -j DROP
-A INPUT -p tcp -m tcp --dport 22 -j LOG --log-prefix "Depurando INPUT to 22 IPTABLE"
-A INPUT -p tcp -m tcp --sport 22 -j LOG --log-prefix "Depurando INPUT from 22 IPTAB"
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 193.147.175.29/32 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 193.147.175.29/32 -p tcp -m tcp --dport 2220 -m state --state NEW -j ACCEPT
-A INPUT -s 193.147.175.59/32 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 6010 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 2220 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 2221 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 2222 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 3331 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 3332 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 3337 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -p tcp -m tcp --dport 3314 -m state --state NEW -j ACCEPT
-A INPUT -s 87.219.215.2/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.3.103/32 -j ACCEPT
-A INPUT -s 192.168.2.159/32 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 255.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 255.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.255/32 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.255/32 -j DROP
-A INPUT -s 224.0.0.0/4 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 0.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -s 127.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 192.168.0.0/16 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 192.168.0.0/19 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 10.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.0/24 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.2/32 -j LOG --log-prefix "Alerta: Fuente falseada, IP p"
-A INPUT -s 10.10.10.2/32 -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "Alerta: Conexiones TCP furtiv"
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -s 255.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 255.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.255/32 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.255/32 -j DROP
-A INPUT -s 224.0.0.0/4 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 0.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -s 127.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 192.168.0.0/16 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 192.168.0.0/19 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 10.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.0/24 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.2/32 -j LOG --log-prefix "Alerta: Fuente falseada, IP p"
-A INPUT -s 10.10.10.2/32 -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "Alerta: Conexiones TCP furtiv"
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -s 255.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 255.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.255/32 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.255/32 -j DROP
-A INPUT -s 224.0.0.0/4 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 0.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -s 127.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 192.168.0.0/16 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 192.168.0.0/19 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 10.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.0/24 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.2/32 -j LOG --log-prefix "Alerta: Fuente falseada, IP p"
-A INPUT -s 10.10.10.2/32 -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "Alerta: Conexiones TCP furtiv"
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -s 255.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 255.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.255/32 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.255/32 -j DROP
-A INPUT -s 224.0.0.0/4 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -s 0.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -s 127.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -s 192.168.0.0/16 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 192.168.0.0/19 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 10.0.0.0/8 -j LOG --log-prefix " Alerta: IP origen falseada "
-A INPUT -s 10.10.10.0/24 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 10.10.10.2/32 -j LOG --log-prefix "Alerta: Fuente falseada, IP p"
-A INPUT -s 10.10.10.2/32 -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "Alerta: Conexiones TCP furtiv"
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o wlan0 -j DROP
-A OUTPUT -d 10.10.10.2/32 -j DROP
-A OUTPUT -d 255.0.0.0/8 -j DROP
-A OUTPUT -d 224.0.0.0/4 -j DROP
-A OUTPUT -d 172.16.0.0/12 -j DROP
-A OUTPUT -d 10.10.10.0/24 -j ACCEPT
-A OUTPUT -d 10.0.0.0/8 -j DROP
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -s 87.219.215.2/32 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -j DROP
-A OUTPUT -p udp -m udp --dport 19 -j DROP
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 500 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 4500 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 1194 -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
-A OUTPUT -p ah -j ACCEPT
-A OUTPUT -p esp -j ACCEPT
-A OUTPUT -p esp -j ACCEPT
-A OUTPUT -p ah -j ACCEPT
-A OUTPUT -p udp -j DROP
-A OUTPUT -p udp -m udp --sport 9 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 2220 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 3317 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 3314 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.3.103/32 -j ACCEPT
-A OUTPUT -d 192.168.2.159/32 -j ACCEPT
-A OUTPUT -d 87.219.215.2/32 -j ACCEPT
-A OUTPUT -d 192.168.1.111/32 -j ACCEPT
-A OUTPUT -d 192.168.2.11/32 -j ACCEPT
-A OUTPUT -d 192.168.20.101/32 -j ACCEPT
-A OUTPUT -d 192.168.1.0/24 -j ACCEPT
-A OUTPUT -d 192.168.2.0/28 -j ACCEPT
-A OUTPUT -d 192.168.3.0/28 -j ACCEPT
-A OUTPUT -d 192.168.4.0/24 -j ACCEPT
-A OUTPUT -d 192.168.5.0/24 -j ACCEPT
-A OUTPUT -d 193.147.0.0/16 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -d 150.214.0.0/16 -j ACCEPT
-A OUTPUT -d 91.189.0.0/16 -j DROP
-A OUTPUT -j LOG --log-prefix "Depurando OUTPUT IPTABLES"
-A OUTPUT -d 192.168.0.0/16 -j DROP
-A SSHBRUTE -m recent --set --name SSH --mask 255.255.255.255 --rsource
-A SSHBRUTE -m recent --update --seconds 300 --hitcount 10 --name SSH --mask 255.255.255.255 --rsource -m limit --limit 1/sec --limit-burst 100 -j LOG --log-prefix "iptables[SSH-brute]: "
-A SSHBRUTE -m recent --update --seconds 300 --hitcount 10 --name SSH --mask 255.255.255.255 --rsource -j DROP
-A SSHBRUTE -j RETURN
-A fail2ban-apache-multiport -j RETURN
-A fail2ban-postfix -j RETURN
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Mon May 29 14:09:51 2017
